fix messagebox spacing

--- a/web/src/pages/devices/modals/AddStandaloneDeviceModal/style.scss
+++ b/web/src/pages/devices/modals/AddStandaloneDeviceModal/style.scss
@@ -35,8 +35,8 @@
     box-sizing: border-box;
     padding: 0 55px;
 
-    .message-box {
-      margin-bottom: 20px;
+    .message-box-spacer {
+      padding-bottom: 20px;
     }
   }
 
