--- a/web/src/pages/users/UserProfile/UserAuthInfo/modals/RecoveryCodesModal/style.scss
+++ b/web/src/pages/users/UserProfile/UserAuthInfo/modals/RecoveryCodesModal/style.scss
@@ -1,9 +1,7 @@
 #view-recovery-codes {
   .content {
-    & > .message-box {
-      width: calc(100% - 6rem);
-      margin: 0 3rem;
-      min-height: 70px;
+    & > .message-box-spacer {
+      padding: 0 30px;
     }
 
     & > .codes {
