--- a/web/src/pages/wizard/components/WizardNetworkImport/style.scss
+++ b/web/src/pages/wizard/components/WizardNetworkImport/style.scss
@@ -12,8 +12,8 @@
       width: 100%;
     }
 
-    & > .message-box {
-      margin-bottom: 25px;
+    & > .message-box-spacer {
+      padding-bottom: 25px;
     }
 
     & > .upload {
